[package]
name = "nucleo_f446re"
version = "0.1.0"
authors = ["Rajiv Ranganath <rajiv.ranganath@atihita.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { path = "../../arch/cortex-m4" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
stm32f446re = { path = "../../chips/stm32f446re" }
